# stock-seasonality

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_docker.sh  pyproject.toml  requirements.in
.github/workflows/: test.yml
config/: prompts.yaml  tickers_list.yaml
notebooks/: 00_example_notebook_1.ipynb  00_offline_eda.ipynb  01_seasonality_metrics.ipynb  01_synth_data_validation.ipynb  02_TODELETE_seasonality_metrics.ipynb  02_all_metrics.ipynb  02_seasonality_metrics_perfect_ticker.ipynb  03_metametric.ipynb  04_all_metrics.ipynb  04_eda_and_modeling.ipynb
references/img/: stock_seasonality_pipeline.mermaid
scripts/: clear_cache.py
src/cfg/: app.yaml
src/core/: date_utils.py
src/core/aws/: aws_utils.py
src/core/db/: db_utils.py
src/metrics/: acf_seasonality.py  anova_seasonality.py  periodogram_strength.py  quadratic_fit.py  stl_strength.py
src/pipeline/: data_loader.py  run_pipeline.py  seasonality_etl.py
src/reporting/: build_features.py  flag_tickers.py  peak_analysis.py  report_generator.py
src/scoring/: meta_scores.py
src/util/: functions.py  load_data.py
src/visualization/: interactive_plots.py  synthetic_data_generator.py
tests/metrics/: test_acf_seasonality.py  test_anova_seasonality.py  test_periodogram_strength.py  test_quadratic_fit.py  test_stl_strength.py
tests/pipeline/: test_data_loader.py  test_run_pipeline.py  test_seasonality_etl.py
tests/reporting/: conftest.py  test_build_features.py  test_flag_tickers.py  test_peak_analysis.py  test_report_generator.py
tests/visualization/: test_interactive_plots.py  test_synthetic_data_generator.py
util/: functions.py
