[project]
name = "stock-seasonality"
version = "0.1.0"
description = "Seasonality patterns detector and analyser for daily stock data"
authors = [{ name = "Niel S Flamarich" }]
requires-python = ">=3.11"
dependencies = [
    "statsmodels>=0.14.4",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "yfinance>=0.2.0",
    "tqdm>=4.60.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]

[tool.pytest.ini_options]
pythonpath = ["source"]
markers = [
    "unit: Fast tests with mocked dependencies",
    "integration: Slower tests with real external APIs",
    "slow: Very slow tests (>30 seconds)"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]
